src/app-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: prod
spec:
  selector:
    app: nginx-webpage
  ports:
  - port: 80
    targetPort: 80
